--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Ethan's Website</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+  <link rel="stylesheet" href="https://use.typekit.net/vzx7jud.css">
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="lightbox.min.css" type="text/css">
   <!-- Core CSS file -->
 <link rel="stylesheet" href="path/to/photoswipe.css"> 
 
@@ -15,188 +17,64 @@
 <link rel="stylesheet" href="path/to/default-skin/default-skin.css">
   </head>
   <body>
-  <header class="toolbar">
-    <nav class="toolbar_navigation">
-      <div class= "toolbar_logo">
-        <a href= "">
-          <h1>Ethan Yerkes</h1>
-        </a>
-      </div>
-      <div class="spacer"></div>
-      <div class="toolbar__toggle-button"><h1>Menu</h1></div>
-      <div class="toolbar_navigation-items">
-          <ul>
-            <li><a href="/"><h1>Landscapes</h1></a></li>
-            <li><a href="/"><h1>Potraits</h1></a></li>
-            <li><a href="/"><h1>Marketing</h1></a></li>
-          </ul>
-      </div>
-    </nav>
-  </header>
-  <main>
-  <h2>First gallery:</h2>
-
-  <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm3.staticflickr.com/2567/5697107145_a4c2eaa0cd_o.jpg" itemprop="contentUrl" data-size="1024x1024">
-          <img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-                                          <figcaption itemprop="caption description">Image caption  1</figcaption>
-                                          
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_b.jpg" itemprop="contentUrl" data-size="964x1024">
-          <img src="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_b.jpg" itemprop="contentUrl" data-size="1024x683">
-          <img src="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 3</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_b.jpg" itemprop="contentUrl" data-size="1024x768">
-          <img src="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 4</figcaption>
-    </figure>
-
-
-  </div>
-
-<h2>Second gallery:</h2>
-
-  <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-
-  
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_b.jpg" itemprop="contentUrl" data-size="964x1024">
-          <img src="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2.1</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_b.jpg" itemprop="contentUrl" data-size="1024x683">
-          <img src="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2.2</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_b.jpg" itemprop="contentUrl" data-size="1024x768">
-          <img src="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2.3</figcaption>
-    </figure>
-
-
-  </div>
-  <h2>Third gallery:</h2>
-
-  <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-
-  
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_b.jpg" itemprop="contentUrl" data-size="964x1024">
-          <img src="https://farm2.staticflickr.com/1043/5186867718_06b2e9e551_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2.1</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_b.jpg" itemprop="contentUrl" data-size="1024x683">
-          <img src="https://farm7.staticflickr.com/6175/6176698785_7dee72237e_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2.2</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_b.jpg" itemprop="contentUrl" data-size="1024x768">
-          <img src="https://farm6.staticflickr.com/5023/5578283926_822e5e5791_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2.3</figcaption>
-    </figure>
-
-
-  </div>
-</main>
-
-
-<!-- Root element of PhotoSwipe. Must have class pswp. -->
-<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-
-    <!-- Background of PhotoSwipe. 
-         It's a separate element, as animating opacity is faster than rgba(). -->
-    <div class="pswp__bg"></div>
-
-    <!-- Slides wrapper with overflow:hidden. -->
-    <div class="pswp__scroll-wrap">
-
-        <!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
-        <!-- don't modify these 3 pswp__item elements, data is added later on. -->
-        <div class="pswp__container">
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
+    <header class="toolbar">
+      <nav class="toolbar_navigation">
+        <div class= "toolbar_logo">
+          <a href="index.html" title="Ethan Yerkes">
+            <h1 id="menu-title__home">Ethan Yerkes</h1>
+          </a>
         </div>
-
-        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-        <div class="pswp__ui pswp__ui--hidden">
-
-            <div class="pswp__top-bar">
-
-                <!--  Controls are self-explanatory. Order can be changed. -->
-
-                <div class="pswp__counter"></div>
-
-                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-
-                <button class="pswp__button pswp__button--share" title="Share"></button>
-
-                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-
-                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-
-                <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-                <!-- element will get class pswp__preloader--active when preloader is running -->
-                <div class="pswp__preloader">
-                    <div class="pswp__preloader__icn">
-                      <div class="pswp__preloader__cut">
-                        <div class="pswp__preloader__donut"></div>
-                      </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-                <div class="pswp__share-tooltip"></div> 
-            </div>
-
-            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-            </button>
-
-            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-            </button>
-
-            <div class="pswp__caption">
-                <div class="pswp__caption__center"></div>
-            </div>
-
-          </div>
-
+        <div class="spacer"></div>
+        <div class="toolbar__toggle-button"><h1>Menu</h1></div>
+        <div class="toolbar_navigation-items">
+            <ul>
+              <li><a href="landscapes/index.html"><h1 id="menu-title__landscapes">Landscapes</h1></a></li>
+              <li><a href="portraits/index.html"><h1 id="menu-title__portraits">Portraits</h1></a></li>
+              <li><a href="blog/index.html"><h1 id="menu-title__blog">Blog</h1></a></li>
+            </ul>
         </div>
-
-</div>
+      </nav>
+    </header>
+      <div class="section">
+        <div class = "gallery">
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+            <a href="img/annie-spratt-KBpIcWV6o2c-unsplash.jpg" data-lightbox="mygallery"><img src= "img/annie-spratt-KBpIcWV6o2c-unsplash.jpg"></a>
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a> 
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+            <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+        </div>
+        <div class = "gallery">
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a> 
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+        </div>
+        <div class = "gallery">
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a> 
+          <a href="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg" data-lightbox="mygallery"><img src="https://farm3.staticflickr.com/2567/5697107145_3c27ff3cd1_m.jpg"></a>
+        </div>
+      </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <script src="lightbox-plus-jquery.min.js" type="text/javascript"></script>
 
   <!-- Core JS file -->
   <script src="path/to/photoswipe.min.js"></script> 
@@ -204,4 +82,13 @@
   <!-- UI JS file -->
   <script src="path/to/photoswipe-ui-default.min.js"></script>
   </body>
+  <footer class="main-footer">
+    <nav>
+      <ul class="main-footer__links">
+        <li class="main-footer__link">
+          <a href="#">Powered by a ButtrDesign&trade;</a>
+        </li>
+      </ul>
+    </nav>
+  </footer>
 </html>
